website: Add table styles, fix table alignment

--- a/website/source/stylesheets/application.css.scss
+++ b/website/source/stylesheets/application.css.scss
@@ -5,6 +5,19 @@
 @import "form";
 
 // TODO: .brand should use Proxima Nova Regular font
+table {
+  font-size: .95rem;
+  th, td {
+    padding: .5rem;
+    border: 1px solid $almostWhiteColor;
+  }
+  th {
+    background-color: $dirtyWhiteColor;
+    text-align: center;
+    color: $grayColor;
+    font-weight: 600
+  }
+}
 
 #coming-soon-banner {
   background-color: $almostBlackColor;
